<resources>
    <string name="app_name">Semester</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Last Name</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account_sign_in">Have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password_recover">Forgot Password? Recover</string>
    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="recent">Recent</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="course_title">Control Systems Engineering</string>
    <string name="description">Ginger rhizomes can be harvested from about 5 months after planting. At this stage they are immature. The roots are tender with a mild flavour and are suitable for fresh consumption or for processing into preserved ginger. After 7 months the rhizomes will become less tender and the flavour will be too strong to use them fresh. They are then only useful for drying.</string>
    <string name="log_out">Log Out</string>
    <string name="course">Course</string>
    <string name="courses">Courses</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="recover_password">Recover Password</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="details">more</string>
    <string name="un_enrolled">Un-Enroll</string>
    <string name="dr_jenifer_lopez">Dr. Jenifer Lopez</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="downloaded">Downloaded</string>
    <string name="course_units">Course Units</string>
    <string name="stared_documents">Stared documents</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About us</string>
    <string name="communicate">COMMUNICATE</string>
    <string name="info">INFO</string>
    <string name="credit_units">Credit Units</string>
    <string name="less">less</string>
    <string name="enroll_now">Enroll now</string>
    <string name="download_in_progress">Download in Progress</string>
    <string name="please_wait">Please wait</string>
    <string name="is_rendering">Rendering Document</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_library_for_all_your_course_content">The platform for your course</string>
    <string name="email">Email</string>
    <string name="or">OR</string>
    <string name="disclaimer">By signing in you agree to the Terms and Conditions and the Privacy Policy of Semester App</string>
    <string name="name">Name</string>
    <string name="more">more</string>
    <string name="your_web_client_id">18094449466-76hgvaea0eigentec4q5i1f8jerdq444.apps.googleusercontent.com</string>
    <string name="continue_your_reading">Continue Your Reading</string>
    <string name="these_documents_are_quite_popular">These documents are quite popular</string>
    <string name="suggested_content">Suggested Content</string>
    <string name="video_recommendations">Video Recommendations</string>

</resources>