<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/signUpFragment">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bawano.semester.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bawano.semester.ui.courses.CoursesFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_courses" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bawano.semester.ui.units.CourseUnitsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_course_units" />

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.bawano.semester.accounts.SignUpFragment"
        android:label="Sign Up"
        tools:layout="@layout/fragment_sign_up" >
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment" />
        <argument
            android:name="email"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="password"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_signUpFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.bawano.semester.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" >
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <argument
            android:name="email"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="password"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_signInFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
</navigation>