<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="courseUnit"
            type="com.bawano.semester.models.CourseUnit" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.details.DetailsFragment">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@{courseUnit.title}"
                        android:textStyle="bold"
                        tools:text="@string/course_title" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/courseCodeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@{courseUnit.code}"
                        tools:text="TETE 2203" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="4dp"
                            android:text="@{courseUnit.role.toString()}"
                            tools:text="@string/dr_jenifer_lopez" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2dp"
                            android:layout_marginBottom="4dp"
                            android:text="@{String.valueOf(courseUnit.creditUnits)}"
                            tools:text="@string/dr_jenifer_lopez" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/credit_units" />

                    </LinearLayout>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/courseDetailsMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:ellipsize="end"
                        android:lines="4"
                        android:text="@{courseUnit.description}"
                        tools:text="@string/description" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/courseDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/content_padding"
                        android:text="@{courseUnit.description}"
                        android:visibility="gone"
                        tools:text="@string/description" />

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerColor="@color/grey_500" />

                    <LinearLayout
                        android:id="@+id/detailsLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/moreTv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/details" />

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/expandIv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:src="@drawable/ic_arrow_down" />
                    </LinearLayout>


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/notesTv"
                        style="@style/TextAppearance.Material3.TitleMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/notes" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="32dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="3"
                        tools:listitem="@layout/rv_pdf_item" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

        </RelativeLayout>

    </ScrollView>
</layout>